# mbox_to_telegram

./: mbox_to_telegram.py  mypy.ini  setup.cfg
