[metadata]
name = mbox_to_telegram
version = 0.0.1

[options]
py_modules = mbox_to_telegram
install_requires =
    telegram-send

[options.entry_points]
console_scripts =
  mbox_to_telegram = mbox_to_telegram:main

[options.extras_require]
test =
    black
    pylint
    flake8<6
    flake8-import-order
    mypy
    types-setuptools


# How to make PyCharm and mypy to work with editable installation:
# export SETUPTOOLS_ENABLE_FEATURES="legacy-editable"
# https://github.com/python/mypy/issues/13392